chore: configure swagger
